topsql: simplify detailed IO collection status
